--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 fastapi
-uvicorn[standard]
-requests
-beautifulsoup4
+uvicorn
+python-multipart
 httpx
 zeroconf
-selenium
-fpdf2
-python-multipart
+fpdf
+Pillow
+vercel-kv
 mangakatana
-hmtai
+selenium
+beautifulsoup4
